<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/activity_learning_view_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/activity_learning_view_tab_slider_dots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_learning_view_tab_slider_dots"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/activity_learning_view_previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/previous" />


        <Button
            android:id="@+id/activity_learning_view_next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/next" />

        <Button
            android:id="@+id/activity_learning_view_finish_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/finish"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>